<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/search"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_treats"
        android:icon="@drawable/party"
        android:title="@string/title_treats" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/profile"
        android:title="@string/title_me" />

</menu>