<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wandertech.wandertreats.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_treats"
        android:name="com.wandertech.wandertreats.main.treats.TreatsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_treats" />


    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.wandertech.wandertreats.main.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.wandertech.wandertreats.main.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.wandertech.wandertreats.main.account.AccountFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_feed" />
</navigation>